# tracer

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  main.cpp  readme.md
demo/: render_00.qoi  render_01.qoi  render_02.qoi
include/tracer/: camera.hpp  colormap.hpp  common.hpp  image.hpp  imgui.hpp  integrator.hpp  intersection.hpp  ray.hpp  scene.hpp  texture.hpp
include/tracer/bvh/: flat_tree.hpp  tree.hpp
include/tracer/camera/: envrionment.hpp  orthographic.hpp  perspective.hpp  pinhole.hpp
include/tracer/detail/: colormap.ipp  texture.ipp
include/tracer/integrator/: cosine_albedo.hpp  integrator.hpp  light_visibility.hpp  unidirectional_pt.hpp
include/tracer/integrator/detail/: pixel_integrator.hpp  task_integrator.hpp
include/tracer/io/: ply.hpp  stl.hpp
include/tracer/light/: directional_light.hpp  light.hpp  lights.hpp
include/tracer/material/: concepts.hpp  fresnel.hpp  lambertian.hpp  material.hpp  materials.hpp  oren_nayar.hpp  simple_color.hpp  texture.hpp
include/tracer/run/: program.hpp
include/tracer/run/sfml/: main.hpp
include/tracer/shape/: box.hpp  concepts.hpp  disc.hpp  mesh.hpp  plane.hpp  point.hpp  shape.hpp  shapes.hpp  sphere.hpp  triangle.hpp
include/tracer/shape/detail/: box.ipp  disc.ipp  plane.ipp  sphere.ipp  triangle.ipp  util.hpp
run/: readme.md  uv_grid_0.qoi  uv_grid_1.qoi  uv_grid_2.qoi
src/: .gitignore  create_checks.sh
src/tracer/run/sfml/: main.cpp
src/tracer/run/tests/: stl.cpp
